# bilateral_control_sim

matlab/: .MATLABDriveTag  Base.ipt  Coriolis.txt  FK.m  FK_3DOF.m  FK_WITH_SYM.m  Gravity.txt  Initialize_robot.m  Link1.ipt  Link2.ipt  Link3.ipt  Link4.ipt  Mass.txt  calculate_dynamics_simulink.m  myrobot.slx  myrobot.slx.autosave  myrobot.slx.original  myrobot.slxc  plot_result.m  robot.slx.original  solve_dynamics.m
myrobot_control/: CMakeLists.txt  package.xml
myrobot_control/include/myrobot_control/: Dynamics.cpp  Dynamics.h  DynamicsSolver.cpp  DynamicsSolver.h
myrobot_control/src/: myrobot_control_node.cpp  test.cpp
myrobot_description/: CMakeLists.txt
myrobot_description/config/: joint_commands.yaml  joint_states.yaml  myrobot2_joint_commands.yaml
myrobot_description/launch/: myrobot.launch  myrobot2.launch  myrobot_gazebo.launch
myrobot_description/meshes/: Base.stl  Link1.stl  Link2.stl  Link3.stl  pegtool.STL
myrobot_description/robots/: myrobot.gazebo.xacro  myrobot.urdf.xacro  myrobot.xacro  myrobot2.urdf.xacro
